# TDDSample

./: CMakeLists.txt  README.md  build-arduino.sh  flash.sh  release-arduino.sh  upload-arduino-remote.sh  watch-any.sh  watch-arduino.sh  watch-test.sh
.devcontainer/: Dockerfile  Dockerfile-internal  devcontainer.json
CPlusPlus/: CMakeLists.txt  build-arduino.sh  release-arduino.sh  watch-any.sh  watch-test.sh
CSharp/: CSharp.sln
PrototypeBlink/: main.cpp
PrototypePinball/: main.cpp
PrototypeRaw/: main.cpp
PrototypeReader/: main.cpp
bsp-arduino/: ArduinoPinReader.h  ArduinoSerialConsumer.h  ArduinoTime.h  ArduinoWritePin.h  bsp.h  bsp_main.h
bsp-linux/: bsp.h  bsp_main.h
interface/: IAudioProvider.h  IBSP.h  IBooleanConsumer.h  IBooleanProvider.h  IIntegerConsumer.h  IIntegerProvider.h  ITimeProvider.h  ITimer.h  IWaiter.h  IWork.h
lib/: App.h  BitsToNibble.h  BoolTrueWaiter.h  EqualTimeInterval.h  EqualTimeIntervalSkipRecover.h  EqualTimeWaiter.h  IBSP.h  IIntegerProvider.h  ITimeProvider.h  ITimer.h  IntegerTimeout.h  NibblesToInteger.h  Pinball.h  PinballApp.h  SinAudioProvider.h  StableInteger.h  Stopwatch.h  TimeTimer.h  WorkUntilTrue.h  stdint.h
lib-behaviour/: BitsToNibbleFunction.h  Blink.h  BlinkBuilder.h  LastValidValue.h  OnOff.h  Stable.h  Wait.h
platformio/: .gitignore  platformio.ini  prepare.sh
tests/: AudioTestBound.h  BitsToNibble_tests.cpp  BlinkBuilder_tests.cpp  EqualTimeIntervalSkip_tests.cpp  EqualTimeInterval_tests.cpp  EqualTimeWaiter_tests.cpp  IntegerConsumerRecorder.h  IntegerTimeout_tests.cpp  LastValidValue_tests.cpp  (+25 more)
(+48 files in other folders)
